--- a/app/index.html
+++ b/app/index.html
@@ -174,7 +174,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                                         </div>
                                         <div class="feature__content__bd">
                                             <div class="content">
-                                                <p>TODO: CMS, Ecommerce, Custom, replatforming, platform selection - lorem ipsum</p>
+                                                <p></p>
                                             </div>
                                         </div>
                                         <div class="feature__content__ft">
@@ -186,7 +186,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                                                     <li>Contentful</li>
                                                     <li>Shopify</li>
                                                     <li>BigCommerce</li>
-                                                    <li>HTML & CSS</li>
+                                                    <li>HTML &amp; CSS</li>
                                                     <li>JavaScript</li>
                                                 </ul>
                                             </div>
@@ -217,7 +217,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                                                     <li>Systems Architecture</li>
                                                     <li>Workflow Diagrams</li>
                                                     <li>Platform Selection</li>
-                                                    <li>ERP, CRM, & PIM Selection</li>
+                                                    <li>ERP, CRM, &amp; PIM Selection</li>
                                                     <li>Data Mapping</li>
                                                     <li>Data Migration</li>
                                                 </ul>
@@ -237,18 +237,18 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                                         </div>
                                         <div class="feature__content__bd">
                                             <div class="content">
-                                                <p>TODO</p>
+                                                <p>An accessible website is good for humans &amp; good for business.</p>
                                             </div>
                                         </div>
                                         <div class="feature__content__ft">
                                             <div class="content">
                                                 <ul class="cols cols--2">
                                                     <li>Accessibility Audits</li>
-                                                    <li>ADA & WCAG Compliance</li>
+                                                    <li>ADA &amp; WCAG Compliance</li>
                                                     <li>Automated Testing</li>
                                                     <li>Remediation</li>
                                                     <li>Demand Letter Review</li>
-                                                    <li>Training & Workshops</li>
+                                                    <li>Training &amp; Workshops</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -262,7 +262,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                                     </div>
                                     <div class="feature__content">
                                         <div class="feature__content__hd">
-                                            <h3 class="title">Support & Maintenance</h3>
+                                            <h3 class="title">Support &amp; Maintenance</h3>
                                         </div>
                                         <div class="feature__content__bd">
                                             <div class="content">
