add web development statement

--- a/app/index.html
+++ b/app/index.html
@@ -174,7 +174,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                                         </div>
                                         <div class="feature__content__bd">
                                             <div class="content">
-                                                <p></p>
+                                                <p>Commitment to understanding "why" is just as important as "how".</p>
                                             </div>
                                         </div>
                                         <div class="feature__content__ft">
