add missing schema property to org

--- a/app/index.html
+++ b/app/index.html
@@ -338,6 +338,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
                     "legalName":"Little Fork LLC",
                     "email":"info@little-fork.com",
                     "telephone":"+1 (612) 217-4104",
+                    "url":"https://little-fork.com",
                     "description":"Little Fork is a tiny web design & development company that brings big ideas to life.",
                     "founder":{
                         "@type":"Person",
