add plausible analytics

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,8 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
 
         <!-- Third Party -->
-        <script src="https://kit.fontawesome.com/70d3953f7a.js" crossorigin="anonymous"></script>
+        <script defer src="https://kit.fontawesome.com/70d3953f7a.js" crossorigin="anonymous"></script>
+        <script defer data-domain="little-fork.com" src="https://plausible.io/js/plausible.js"></script>
 
         <!-- CSS -->
         <link rel="stylesheet" media="screen and (min-width: 1em)" href="assets/styles/app.css?v=2021-12-10" />
