add social sharing images

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Little Fork" />
         <meta property="og:description" content="Little Fork is a tiny web design & development company that brings big ideas to life." />
-        <meta property="og:image" content="TODO 1:1 Image" />
+        <meta property="og:image" content="https://little-fork.com/assets/media/little-fork-og-share.png" />
         <meta property="og:image:alt" content="Little Fork" />
         <meta property="og:locale" content="en_US" />
 
@@ -38,7 +38,7 @@ $$ |  $$ |$$$$$$$$\ $$$$$$$$\ $$$$$$$$\ $$$$$$  |         $$ |       $$ |    $$$
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Little Fork">
         <meta name="twitter:description" content="Little Fork is a tiny web design & development company that brings big ideas to life.">
-        <meta name="twitter:image" content="TODO 2:1 Image">
+        <meta name="twitter:image" content="https://little-fork.com/assets/media/little-fork-twitter-share.png">
         <meta name="twitter:image:alt" content="Little Fork">
 
         <!-- Favicons from https://realfavicongenerator.net -->
